--- a/package.json
+++ b/package.json
@@ -7,7 +7,38 @@
   "author": "devrsi0n@gmail.com",
   "license": "MIT",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@types/jest": "^24.0.12",
+    "babel-jest": "^24.8.0",
+    "husky": "^2.2.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^8.1.6",
+    "prettier": "^1.17.0",
     "typescript": "^3.4.5"
+  },
+  "scripts": {
+    "prettier": "prettier --write src/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,html,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "ignore": [
+      "**/dist/**/*.js",
+      "**/lib/**/*.js",
+      "**/build/**/*.js"
+    ]
   }
 }
