--- a/algs4/tsconfig.json
+++ b/algs4/tsconfig.json
@@ -7,12 +7,14 @@
     "declaration": true,
     "pretty": true,
     "skipLibCheck": true,
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "experimentalDecorators": true,
     "sourceMap": true,
     "target": "es5",
     "strict": true,
-    "types": ["jest"]
+    "types": ["jest"],
+    "outDir": "lib"
   },
+  "exclude": ["node_modules", "lib", "**/*.test.ts"],
   "noEmitOnError": true
 }
