--- a/algs4/package.json
+++ b/algs4/package.json
@@ -1,6 +1,6 @@
 {
   "name": "algs4",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "The book Algorithms's implementation, written with TypeScript",
   "main": "lib/index.js",
   "files": [
@@ -20,10 +20,10 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@jest-runner/electron": "^2.0.2",
     "@types/jest": "^24.0.19",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
-    "jest-canvas-mock": "^2.1.2",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.4"
   },
