--- a/algs4/tsconfig.json
+++ b/algs4/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "target": "es5",
     "strict": true,
