--- a/example/package.json
+++ b/example/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.1",
+    "@types/reach__router": "^1.2.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "algs4": "^0.0.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
@@ -32,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/core": "^10.0.21",
+    "@emotion/styled": "^10.0.17"
   }
 }
