--- a/algs4/package.json
+++ b/algs4/package.json
@@ -1,9 +1,10 @@
 {
   "name": "algs4",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "The book Algorithms's implementation, written with TypeScript",
   "main": "lib/index.js",
   "files": [
+    "src",
     "lib"
   ],
   "types": "./lib/index.d.ts",
@@ -13,6 +14,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
+    "watch": "tsc --watch",
     "prepublishOnly": "yarn run build && yarn test"
   },
   "devDependencies": {
