--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "release": "lerna version --conventional-commits",
     "publish": "lerna publish from-git",
     "build": "lerna run --stream --toposort build",
-    "lint": "eslint --fix packages/"
+    "lint": "eslint --fix --ext .tsx,.ts,.js packages/"
   },
   "husky": {
     "hooks": {
@@ -29,7 +29,7 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "eslint": "^6.6.0",
-    "eslint-config-prettify-ts-react": "^0.1.3",
+    "eslint-config-prettify-ts-react": "^0.1.4",
     "husky": "^3.0.9",
     "lerna": "^3.18.3",
     "lint-staged": "^9.4.2"
