--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
     - name: yarn install, build, and test
       run: |
         yarn
-        yarn run build --if-present
+        yarn run build
         yarn test
       env:
         CI: true
