--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: [macOS-10.14, windows-2016]
+    runs-on: [macos-latest, windows-latest]
 
     strategy:
       matrix:
