--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: [macos-latest, windows-latest]
+    runs-on: windows-latest
 
     strategy:
       matrix:
