--- a/packages/algs4/package.json
+++ b/packages/algs4/package.json
@@ -21,11 +21,10 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
-    "@jest-runner/electron": "^2.0.2",
     "@types/jest": "^24.0.22",
     "babel-jest": "^24.9.0",
-    "electron": "6.0.12",
     "jest": "^24.9.0",
+    "jest-canvas-mock": "^2.2.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.7.2"
   },
