--- a/packages/algs4/package.json
+++ b/packages/algs4/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
     "@types/jest": "^24.0.22",
+    "@types/ms": "^0.7.31",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@types/seedrandom": "^2.4.28",
+    "ms": "^2.1.2",
     "printf": "^0.5.2",
     "seedrandom": "^3.0.5"
   },
