feat(algs4): add new lib `DoublingTest`, `DoublingRatio`

--- a/packages/algs4/tsconfig.json
+++ b/packages/algs4/tsconfig.json
@@ -2,17 +2,19 @@
   "compileOnSave": true,
   "compilerOptions": {
     // "incremental": true,
-    // "importHelpers": true,
     "esModuleInterop": true,
     "declaration": true,
+    "downlevelIteration": true,
     "pretty": true,
     "skipLibCheck": true,
+    "importHelpers": true,
     "lib": ["esnext", "dom", "dom.iterable"],
+    "module": "commonjs",
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "moduleResolution": "node",
-    "target": "es6",
+    "target": "es5",
     // "strict": true,
     "types": ["jest"],
     "outDir": "lib"
