--- a/packages/algs4/package.json
+++ b/packages/algs4/package.json
@@ -14,6 +14,7 @@
     "test": "jest",
     "build": "tsc",
     "watch": "tsc --watch",
+    "run-main": "node ./script/run-main.js",
     "prepublishOnly": "yarn run build && yarn test"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/jest": "^24.0.22",
     "@types/ms": "^0.7.31",
     "babel-jest": "^24.9.0",
+    "inquirer": "^7.0.0",
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
     "ts-jest": "^24.1.0",
