--- a/packages/algs4/package.json
+++ b/packages/algs4/package.json
@@ -28,11 +28,13 @@
     "inquirer": "^7.0.0",
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
+    "jest-mock-process": "^1.2.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.7.2"
   },
   "dependencies": {
     "@types/seedrandom": "^2.4.28",
+    "debug": "^4.1.1",
     "ms": "^2.1.2",
     "printf": "^0.5.2",
     "seedrandom": "^3.0.5",
