--- a/packages/algs4/package.json
+++ b/packages/algs4/package.json
@@ -24,7 +24,10 @@
     "@babel/preset-typescript": "^7.7.2",
     "@types/jest": "^24.0.22",
     "@types/ms": "^0.7.31",
+    "@types/seedrandom": "^2.4.28",
     "babel-jest": "^24.9.0",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.5.2",
     "inquirer": "^7.0.0",
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
@@ -33,13 +36,10 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@types/seedrandom": "^2.4.28",
     "debug": "^4.1.1",
     "ms": "^2.1.2",
     "printf": "^0.5.2",
-    "seedrandom": "^3.0.5",
-    "shelljs": "^0.8.3",
-    "ts-node": "^8.5.2"
+    "seedrandom": "^3.0.5"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
